--- a/src/styles/modules/Player.module.sass
+++ b/src/styles/modules/Player.module.sass
@@ -61,6 +61,7 @@
     transition: 200ms
     cursor: pointer
 
+
     & img
       width: 100px
 
@@ -73,11 +74,9 @@
       &:hover
         width: 100px
 
-  &__card_for_attack
+  &__card_for_defend
     margin-bottom: 40px
     width: 60px
-
-
 
   &__card:disabled
     filter: brightness(0.5)
